@@ -1,3 +1,7 @@
+2001-03-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* tools/shp2pcx.cc: convert shp+pal to a .pcx for each frame
+	* tools/Makefile.am: build shp2pcx
+
 2001-03-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* configure.in, compiler/Makefile.am: added --disable-compiler switch
 
